# TenderDocuments

./: .gitignore  PLAN.md  PROGRESS.md  SPEC.md  TASKS.md  四川建筑施工招标文件智能解读与投标风险提示系统-MVP技术架构.md  四川建筑施工招标文件智能解读与投标风险提示系统-需求分析.md
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 0001_create_projects.py  0002_create_operation_logs.py  0003_create_upload_sessions.py  0004_create_documents.py  0005_create_document_versions.py  0006_create_document_relations.py  0007_create_analysis_runs.py  0008_analysis_run_active_uniqueness.py  0009_create_analysis_tasks.py  0010_create_task_attempts.py  0011_create_outbox_events.py  0012_task_attempt_heartbeat.py
backend/src/tender_insight/: __init__.py  main.py
backend/src/tender_insight/bootstrap/: __init__.py  config.py  db.py
backend/src/tender_insight/modules/: __init__.py
backend/src/tender_insight/shared/: __init__.py  business_time.py  domain_error.py  error_codes.py  errors.py  identifiers.py  money.py  orm.py  pagination.py  request_context.py  score.py  state_transitions.py  states.py
backend/src/tender_insight/workers/: __init__.py  celery_app.py  queues.py
backend/tests/: __init__.py  conftest.py  test_health.py  test_smoke.py
backend/tests/architecture/: __init__.py  dependency_rules.py  test_dependency_rules.py  test_layering.py  test_no_auth_entry.py  test_no_identity.py
backend/tests/bootstrap/: __init__.py  test_config.py
backend/tests/docs/: __init__.py  test_adr.py  test_module_readme.py
backend/tests/infra/: __init__.py  test_compose.py
backend/tests/migrations/: __init__.py  test_project_migration.py
backend/tests/modules/: __init__.py  test_example.py
backend/tests/modules/analysis/: test_analysis_run_active_uniqueness.py  test_analysis_run_domain.py  test_analysis_run_migration.py  test_analysis_task_domain.py  test_analysis_task_migration.py  test_stuck_task_recovery.py  test_stuck_task_scan.py  test_task_attempt_migration.py  test_task_claim.py  test_task_heartbeat.py  test_task_ownership.py  test_task_result.py
backend/tests/modules/document/: __init__.py  test_analysis_input.py  test_complete_upload.py  test_complete_upload_api.py  test_compression.py  test_confirm_document_type.py  test_confirm_published_date.py  test_create_document_relation.py  test_create_upload_session.py  (+22 more)
backend/tests/shared/: __init__.py  test_business_time.py  test_decimal_values.py  test_errors.py  test_identifiers.py  test_pagination.py  test_request_context.py  test_state_transitions.py  test_states.py
backend/tests/workers/: test_queues.py
(+149 files in other folders)
